2011-04-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.8 release procedure:
 	Changes since nco-4_0_7: HPSS, CF bounds & noleap, ncatted, NC_BYTE
	cd ~/nco;cvs tag -d nco-4_0_8;cvs tag -d nco-4_0_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.8 release"
	cvs tag -c nco-4_0_8;cvs tag -c nco-4_0_8-1

2011-04-20  Charlie Zender  <zender@uci.edu>

	* Built NCO on NCAR Mirage and GLADE filesystem. Seems OK.

	* Fix NC_BYTE and NC_UBYTE printing for attributes

2011-04-19  Charlie Zender  <zender@uci.edu>

	* Tweak NC_BYTE printing routines (again!)

	* Migrate to netCDF 4.1.2. Test suite passes.

	* Append -lexpat to -ludunits2 to satisfy netCDF 4.1.2
	libudunits2.so dependencies in Debian/Ubuntu systems

	* Remove msrcp, msread, nrnet functionality

	* Implement and document 'hsi get' command

	* Prepare nco_fl_mk_lcl() for HPSS access using 'hsi get' command

2011-04-11  Charlie Zender  <zender@uci.edu>

	* Kludgy fixes to bld/Makefile for AIX which lacks nc-config

2011-04-03  Charlie Zender  <zender@uci.edu>

	* Alter bld/Makefile link line to use nc-config --libs

2011-03-21  Charlie Zender  <zender@uci.edu>

	* Change "no_leap" to "noleap" for CF-compliance

2011-03-18  Charlie Zender  <zender@uci.edu>

	* Fix netCDF4/_FillValue/overwrite-create code path in nco_aed_prc()
	Solves TODO nco1011

	* Fix nco_aed_prc() so that it does not attempt nco_att_rename()
	on non-existent netCDF4 missing value attributes.
	Helps, though does not fix, TODO nco1011 reported by Kyle Wilcox.
	Bug still triggered elsewhere in the code.

	* Clarify code path in nco_aed_prc()

2011-03-11  Charlie Zender  <zender@uci.edu>

	* Include instructions for beta-releases of executables for AIX

2011-03-05  Charlie Zender  <zender@uci.edu>

	* Change prerelease.txt to beta.txt and update it for TAGS

2011-03-04  Charlie Zender  <zender@uci.edu>

	* NB: "bounds" support re-exposes bug TODO nco111 triggered by ncap.in test script

	* Document CF "bounds" support, including -c and -C compliance