@@ -1,3 +1,7 @@
+2011-04-22  Charlie Zender  <zender@uci.edu>
+
+	* Test disabling NC_NOFILL mode
+
 2011-04-21  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.8 release procedure:
